docs/apache-airflow-providers-amazon/9.0.0/_sources/_api/airflow/providers/amazon/aws/utils/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.utils`
============================================

.. py:module:: airflow.providers.amazon.aws.utils


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   asset_compat_lineage_collector/index.rst
   connection_wrapper/index.rst
   eks_get_token/index.rst
   emailer/index.rst
   identifiers/index.rst
   mixins/index.rst
   openlineage/index.rst
   rds/index.rst
   redshift/index.rst
   sagemaker/index.rst
   sqs/index.rst
   suppress/index.rst
   tags/index.rst
   task_log_fetcher/index.rst
   waiter/index.rst
   waiter_with_logging/index.rst


Package Contents
----------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.utils.trim_none_values
   airflow.providers.amazon.aws.utils.datetime_to_epoch
   airflow.providers.amazon.aws.utils.datetime_to_epoch_ms
   airflow.providers.amazon.aws.utils.datetime_to_epoch_utc_ms
   airflow.providers.amazon.aws.utils.datetime_to_epoch_us
   airflow.providers.amazon.aws.utils.get_airflow_version
   airflow.providers.amazon.aws.utils.get_botocore_version
   airflow.providers.amazon.aws.utils.validate_execute_complete_event



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.utils.log


.. py:data:: log

   

.. py:function:: trim_none_values(obj)


.. py:function:: datetime_to_epoch(date_time)

   Convert a datetime object to an epoch integer (seconds).


.. py:function:: datetime_to_epoch_ms(date_time)

   Convert a datetime object to an epoch integer (milliseconds).


.. py:function:: datetime_to_epoch_utc_ms(date_time)

   Convert a datetime object to an epoch integer (milliseconds) in UTC timezone.


.. py:function:: datetime_to_epoch_us(date_time)

   Convert a datetime object to an epoch integer (microseconds).


.. py:function:: get_airflow_version()


.. py:function:: get_botocore_version()

   Return the version number of the installed botocore package in the form of a tuple[int,...].


.. py:function:: validate_execute_complete_event(event = None)


